--- a/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
@@ -47,15 +47,15 @@ msgstr ""
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "ITK-dev Project Theme"
-msgstr ""
+msgstr "ITK-dev Projekttema"
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "Project theme"
-msgstr ""
+msgstr "Projekttema"
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "itkdev"
-msgstr ""
+msgstr "itkdev"
 
 #: themes/custom/itkdev/itkdev_project_theme/itkdev_project_theme.info.yml:0
 msgid "Header"
@@ -79,19 +79,19 @@ msgstr "Vælg"
 
 #: themes/custom/itkdev/itkdev_project_theme/js/choices.js:0
 msgid "No results found"
-msgstr ""
+msgstr "Ingen resultater fundet"
 
 #: themes/custom/itkdev/itkdev_project_theme/js/choices.js:0
 msgid "No choices to choose from"
-msgstr ""
+msgstr "Ingen valgmuligheder"
 
 #: themes/custom/itkdev/itkdev_project_theme/js/choices.js:0
 msgid "Press to select"
-msgstr ""
+msgstr "Tryk for at vælge"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/ai-screening-yes-no-stop-html.html.twig:7
 msgid "Response"
-msgstr ""
+msgstr "Svar"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:34
 msgid "State"
@@ -107,23 +107,23 @@ msgstr "Ejer"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:48
 msgid "Contributers"
-msgstr ""
+msgstr "Bidragydere"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:63
 msgid "Will we?"
-msgstr ""
+msgstr "Vil vi?"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:67
 msgid "Project eveluation of whether it should be used"
-msgstr ""
+msgstr "Projektevaluering af om det skal bruges"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:68
 msgid "See project report"
-msgstr ""
+msgstr "Se projektrapport"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:93
 msgid "View report"
-msgstr ""
+msgstr "Se rapport"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/node--project.html.twig:100 themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig:98
 msgid "Edit"
@@ -147,93 +147,93 @@ msgstr "Gå til næste side"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/pager.html.twig:61
 msgid "Next page"
-msgstr ""
+msgstr "Næste side"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:14
 msgid "Report: @node_label"
-msgstr ""
+msgstr "Rapport: @node_label"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:15;18
 msgid "Report: Project tracks"
-msgstr ""
+msgstr "Rapport: Projektspor"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:50
 msgid "The graph shows the automatically calculated evaluation."
-msgstr ""
+msgstr "Grafen viser den automatisk beregnede evaluering."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:54
 msgid "This project has been manually evaluated."
-msgstr ""
+msgstr "Dette projekt er blevet manuelt evalueret."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:60 themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig:8 themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig:55
 msgid "System evaluation"
-msgstr ""
+msgstr "Systemevaluering"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:67 themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig:9
 msgid "Manual evaluation"
-msgstr ""
+msgstr "Manuel evaluering"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:85
 msgid "@dimension is illustrated by bubble size"
-msgstr ""
+msgstr "@dimension er illustreret med boblestørrelse"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project-track.html.twig:106 themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig:42
 msgid "Go Back"
-msgstr ""
+msgstr "Gå tilbage"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig:10
 msgid "Report: @label"
-msgstr ""
+msgstr "Rapport: @label"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig:19
 msgid "Project tracks"
-msgstr ""
+msgstr "Projektspor"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/reports-project.html.twig:34
 msgid "Create report for \"@trackLabel\" track"
-msgstr ""
+msgstr "Opret rapport for \"@trackLabel\" spor"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:10
 msgid "Site setup"
-msgstr ""
+msgstr "Site opsætning"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:18;24
 msgid "Setup frontpage"
-msgstr ""
+msgstr "Opsæt forside"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:32 themes/custom/itkdev/itkdev_project_theme/templates/form/form--ai-screening-project-track-thresholds.html.twig:18
 msgid "Setup project track thresholds"
-msgstr ""
+msgstr "Opsæt tærskelværdier for projektspor"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:36
 msgid "Set up thresholds for each project. The thresholds are used to determine when a suggested project track evaluation changes from \"Refused\" to \"Undecided\" to \"Approved\""
-msgstr ""
+msgstr "Opsæt tærskelværdier for hvert projekt. Tærskelværdierne bruges til at bestemme, hvornår en foreslået projektsporsevaluering ændres fra \"Afvist\" til \"Uafklaret\" til \"Godkendt\""
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/site-setup.html.twig:41
 msgid "Setup thresholds"
-msgstr ""
+msgstr "Opsæt tærskelværdier"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:18
 msgid "Project that complies to all demands for use"
 msgid_plural "Projects that comply to all demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Projekt der opfylder alle krav til brug"
+msgstr[1] "Projekter der opfylder alle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:28
 msgid "Project that complies to some demands for use"
 msgid_plural "Projects that comply to some demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Projekt der opfylder nogle krav til brug"
+msgstr[1] "Projekter der opfylder nogle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:38
 msgid "Project that does not comply to the demands for use"
 msgid_plural "Projects that do not comply to the demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Projekt der ikke opfylder kravene til brug"
+msgstr[1] "Projekter der ikke opfylder kravene til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/user.html.twig:39
 msgid "User mail"
-msgstr ""
+msgstr "Bruger-mail"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/webform-progress-tracker.html.twig:55
 msgid "Current"
@@ -253,35 +253,35 @@ msgstr "Brødkrumme"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/nav-button.html.twig:3
 msgid "Open navigation menu"
-msgstr ""
+msgstr "Åbn navigationsmenu"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/nav-button.html.twig:4
 msgid "Close navigation menu"
-msgstr ""
+msgstr "Luk navigationsmenu"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/new-project-button.html.twig:6 themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig:51
 msgid "Create new project"
-msgstr ""
+msgstr "Opret nyt projekt"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig:22
 msgid "Refused"
-msgstr ""
+msgstr "Afvist"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig:26
 msgid "Undecided"
-msgstr ""
+msgstr "Uafklaret"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/project-status.html.twig:30
 msgid "Approved"
-msgstr ""
+msgstr "Godkendt"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig:3
 msgid "Project evaluations"
-msgstr ""
+msgstr "Projektevalueringer"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/reportsMultiProjectTable.html.twig:7
 msgid "Project name"
-msgstr ""
+msgstr "Projektnavn"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/tablesort-indicator.html.twig:22
 msgid "Sort ascending"
@@ -305,7 +305,7 @@ msgstr "User"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/user-menu.html.twig:30
 msgid "My profile"
-msgstr ""
+msgstr "Min profil"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/user-menu.html.twig:35
 msgid "Log out"
@@ -313,15 +313,15 @@ msgstr "Log ud"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:7
 msgid "Hide questions/answers"
-msgstr ""
+msgstr "Skjul spørgsmål/svar"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:11
 msgid "Demands"
-msgstr ""
+msgstr "Krav"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:15
 msgid "Rules"
-msgstr ""
+msgstr "Regler"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:19
 msgid "Tasks"
@@ -329,7 +329,7 @@ msgstr "Opgaver"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:23
 msgid "Considerations"
-msgstr ""
+msgstr "Overvejelser"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:28
 msgid "Summary"
@@ -337,31 +337,31 @@ msgstr "Resumé"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:36
 msgid "Report"
-msgstr ""
+msgstr "Rapport"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:38;42
 msgid "Task"
-msgstr ""
+msgstr "Opgave"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:39
 msgid "You must ensure that users/citizens that use an AI-system are informed that it is an AI-system."
-msgstr ""
+msgstr "Du skal sikre, at brugere/borgere, der anvender et AI-system, informeres om, at det er et AI-system."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/components/webformSubmissionReportHeader.html.twig:43
 msgid "A Fundamental rights impact assessment (FRIA) must always be implemented."
-msgstr ""
+msgstr "En vurdering af indvirkning på grundlæggende rettigheder (FRIA) skal altid implementeres."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/form--ai-screening-project-track-thresholds.html.twig:24
 msgid "Define thresholds for all projects. This is used by the system to make a suggested evaluation by measuring all the combined answers of each project track against the corresponding thresholds."
-msgstr ""
+msgstr "Definer tærskelværdier for alle projekter. Dette bruges af systemet til at lave en foreslået evaluering ved at måle alle de kombinerede svar for hvert projektspor mod de tilsvarende tærskelværdier."
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/form--user-form.html.twig:18
 msgid "Update user profile"
-msgstr ""
+msgstr "Opdater brugerprofil"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig:36
 msgid "Not started"
-msgstr ""
+msgstr "Ikke påbegyndt"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig:49
 msgid "Status"
@@ -369,7 +369,7 @@ msgstr "Status"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/project-track-edit-form.html.twig:54
 msgid "Evaluation: @trackName"
-msgstr ""
+msgstr "Evaluering: @trackName"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--ai-screening-static-select.html.twig:29 themes/custom/itkdev/itkdev_project_theme/templates/form/webform-element-base-html--text-format.html.twig:32
 msgid "{Empty}"
@@ -381,9 +381,8 @@ msgstr "Ingen"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig:54
 msgid "Latest"
-msgstr ""
+msgstr "Seneste"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/views/views-view-table--front.html.twig:137
 msgid "Show all projects"
-msgstr ""
-
+msgstr "Vis alle projekter"
