--- a/web/themes/custom/itkdev/itkdev_base_theme/translations/itkdev_base_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_base_theme/translations/itkdev_base_theme.da.po
@@ -18,8 +18,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"POT-Creation-Date: 2025-04-24 10:40+0200\n"
-"PO-Revision-Date: 2025-04-24 10:40+0200\n"
+"POT-Creation-Date: 2025-05-09 11:16+0200\n"
+"PO-Revision-Date: 2025-05-09 11:16+0200\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Danish <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -53,7 +53,7 @@ msgstr "Indhold"
 
 #: themes/custom/itkdev/itkdev_base_theme/itkdev_base_theme.info.yml:0
 msgid "Footer"
-msgstr "Footer"
+msgstr "Sidefod"
 
 #: themes/custom/itkdev/itkdev_base_theme/build/app.js:0
 msgid "Select"
@@ -113,7 +113,7 @@ msgstr "Editor"
 
 #: themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig:5
 msgid "User"
-msgstr "User"
+msgstr "Bruger"
 
 #: themes/custom/itkdev/itkdev_base_theme/templates/components/user-menu.html.twig:29
 msgid "My profile"
