--- a/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
+++ b/web/themes/custom/itkdev/itkdev_project_theme/translations/itkdev_project_theme.da.po
@@ -231,20 +231,20 @@ msgstr "Opsæt tærskelværdier"
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:18
 msgid "Project that complies to all demands for use"
 msgid_plural "Projects that comply to all demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Projekt der opfylder alle krav til brug"
+msgstr[1] "Projekter der opfylder alle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:28
 msgid "Project that complies to some demands for use"
 msgid_plural "Projects that comply to some demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Projekt der opfylder nogle krav til brug"
+msgstr[1] "Projekter der opfylder nogle krav til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/stats-top-block.html.twig:38
 msgid "Project that does not comply to the demands for use"
 msgid_plural "Projects that do not comply to the demands for use"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Projekt der ikke opfylder kravene til brug"
+msgstr[1] "Projekter der ikke opfylder kravene til brug"
 
 #: themes/custom/itkdev/itkdev_project_theme/templates/user.html.twig:39
 msgid "User mail"
