--- a/config/sync/language/da/webform.webform.complexity_uncertainty_default.yml
+++ b/config/sync/language/da/webform.webform.complexity_uncertainty_default.yml
@@ -1,8 +1,8 @@
-title: Kompleksitet
+title: 'Kompleksitet og Usikkerhed'
 elements: |-
   kompleksitet:
     '#type': webform_wizard_page
-    '#title': 'Kompleksitet og Usikkerhed'
+    '#title': 'Kompleksitet'
     hvor_stor_er_projektorganisationen:
       '#type': ai_screening_weighted_radios
       '#title': 'Hvor stor er projektorganisationen?'
